CRUD & Change Password

--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.css
@@ -27,5 +27,13 @@
 {
     cursor: pointer;
 }
-
+.btns:hover
+{
+    background-color:white;
+}
+.btns
+{
+    text-decoration: none;
+    color: black;
+}
 
