--- a/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.html
@@ -1,1 +1,46 @@
-<p>resetpassword works!</p>
+<mat-card class="card">
+    <mat-card-header class="title">
+      <div><mat-icon matPreffix>lock</mat-icon></div>
+      <mat-card-title >Change Password</mat-card-title>
+    </mat-card-header>
+    <div *ngIf= "formvalid;else other_form">
+    <mat-card-content class= "cardcontent">
+      <form [formGroup]="changePasswordForm" autocomplete="off">
+  
+        <mat-form-field appearance="outline" class="oldpass">
+         <mat-label>Enter Current Password</mat-label>
+         <input [type]="show ? 'password' : 'text'" matInput placeholder="Enter your Password" formControlName="oldpassword">
+         <mat-icon matSuffix (click)="password()">{{show ? 'visibility_off' : 'visibility'}}</mat-icon>
+         </mat-form-field> 
+         <div class="btns">
+         <button class="btn1" [disabled]="!changePasswordForm.valid" mat-raised-button color="primary" type="submit" (click)="Check()" >Check</button>
+         <button class="btn2" mat-raised-button color="warn"  (click)="clear()" >Close</button>
+        </div>  
+      </form>     
+    </mat-card-content>
+    </div>
+    <ng-template #other_form>
+    <mat-card-content class="cardcontent1">
+    <form  [formGroup]="setPasswordForm" autocomplete="off" class="form1">
+        <mat-form-field appearance="outline">
+            <mat-label>Enter New Password</mat-label>
+            <input [type]="show ? 'password' : 'text'" matInput (keyup)="applyFilter1($event.target.value)"
+             placeholder="Enter your New Password" formControlName="newpassword">
+            <mat-icon matSuffix (click)="password()">{{show ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </mat-form-field> 
+           
+         <mat-form-field appearance="outline">
+              <mat-label>Confirm New Password</mat-label>
+              <input type = password matInput (keyup)="applyFilter($event.target.value)" placeholder="Confirm your New Password" 
+              formControlName="confirmPassword" autocomplete="off">
+              <mat-icon matSuffix >visibility_off</mat-icon>
+          </mat-form-field>
+          <h6 class="display">{{display}}</h6>
+    </form>
+    <mat-card-actions class="btn">
+        <button class="btn1" [disabled]="!setPasswordForm.valid" mat-raised-button color="primary" type="submit" (click)="onSubmit()" >Submit</button>
+        <button class="btn2" mat-raised-button color="warn"(click)="clear()">Close</button>
+      </mat-card-actions>
+    </mat-card-content>
+</ng-template>
+  </mat-card>
