--- a/ProjectAllotmentPortal/AngularHUB/src/app/login/login.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       <div class="card-image">
         <img id="image" src="../../assets/team1.jpg">
       </div>
-      <div class="card-stacked" *ngIf = "isForgotPassword">
+      <div class="card-stacked" >
         <div class="card-content" >
           <div *ngIf="isLoginError" class="red-text center error-message">
             <i class="material-icons">error</i> Incorrect username or password
@@ -21,13 +21,15 @@
                </div>
                <div class="row">
                   <div class="input-field col s12">
-                    <i class="material-icons prefix">lock</i>
-                    <input type="password" #Password ngModel name="Password" placeholder="Password" required>
+                    <i class="material-icons prefix" (click)="password()">{{show ? 'visibility_off' : 'visibility'}}</i>
+                    <!--<mat-icon matSuffix (click)="password()">{{show ? 'visibility_off' : 'visibility'}}</mat-icon>-->
+                    <input [type]="show ? 'password' : 'text'" #Password ngModel name="Password" placeholder="Password" required>
+                    
                   </div>
                 </div>
-                <div class="input-field col s12" >
+               <!-- <div class="input-field col s12" >
                   <span (click)="forgotpassword()">Forgot Password</span>
-                </div>
+                </div> -->
                 <div class="row">
                     <div class="input-field col s12">
                       <button [disabled]="!loginForm.valid" class="btn-large btn-submit" type="submit">Login</button>
@@ -36,7 +38,7 @@
             </form>
         </div>      
       </div>
-      <div *ngIf = "!isForgotPassword">
+     <!-- <div *ngIf = "!isForgotPassword">
         <form #forgotPassword="ngForm" class="col s12 white" (ngSubmit)="usernameSubmit(UserName.value)" id= "form">
         <h4>Forgot Password</h4>
         <div class="row">
@@ -49,7 +51,7 @@
           <button [disabled]="!forgotPassword.valid" class="btn-large btn-submit" type="submit">Login</button>
         </div>
       </form>
-      </div>
+      </div> -->
     </div>
   </div>
 </body >
