--- a/ProjectAllotmentPortal/AngularHUB/src/app/welcomepage/welcomepage.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/welcomepage/welcomepage.component.css
@@ -1,14 +1,15 @@
+
 .row
 {
     position: relative;
     width: 60%;
-    left: 12em;
-    top:2em;
-    
+    left: 14em;
+    top: 2em;    
 }
 .card
 {
-    bottom: 0.8em;    
+    left: 7em;
+    bottom: 0.6em;    
     text-align: center;
     position: relative;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 12), 0 5px 5px 0 rgba(50, 51, 74, 5);
@@ -18,7 +19,7 @@
     position: relative;
     height: 90%;
     width: 75%;
-    right: 12em;
+    right: 14em;
     bottom: 2em;
 }
 .name{
@@ -30,4 +31,34 @@
 h6{
     font-weight: bold;
     font-size: 18px;
+}
+.greeting-card
+{
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 12), 0 5px 5px 0 rgba(50, 51, 74, 5);
+    width:40%;
+    right: 14em;
+    position: relative;
+    text-align: center;
+    height: 400px;
+}
+.greeting-msg
+{
+    position: absolute;
+    bottom: 13em;
+    font-weight: bold;
+    
+}
+.greetingimage
+{
+    bottom: 6em;
+    right: 5em;
+    height: 140px;
+    width:160px;
+    position: absolute;
+}
+.day
+{
+    bottom: 3em;
+    right: 4.5em;
+    position: absolute;
 }
