--- a/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.css
@@ -3,41 +3,45 @@
     position: relative;
     overflow: hidden;
     text-align: center;
+    
 }
 .cardcontent
 {
+    top:2em;
     height: 200px;
     position: relative;
 }
 .title
 {
     position: relative;
-    left: 5em;
+    left: 6em;
+    top:2em;
 }
 .oldpass
 {
-    top:3em;
+    top:3.5em;
     position: relative;
 }
 .btns
 {
-    top: 5em;
+    top: 7em;
     position: relative;
 }
 .btn1
 {
-    right: 1.5em;
+    right: 2.5em;
     position: relative;
 }
 .btn2
 {
-    left: 1.5em;
+    left: 2.5em;
     position: relative;
 }
 .cardcontent1
 {
     height: 230px;
     position: relative;
+    top:2em;
 }
 .form1
 {
@@ -48,10 +52,11 @@
     position: relative;
     top: 1em;
 }
-.display
+.displays
 {
     position: relative;
     font-size: 18px;
+    font-weight: 400;
 }
 .make-red
 {
