--- a/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<body class="card">
     <mat-card-header class="title">
       <div><mat-icon matPreffix>lock</mat-icon></div>
       <mat-card-title >Change Password</mat-card-title>
@@ -24,18 +24,18 @@
     <form  [formGroup]="setPasswordForm" autocomplete="off" class="form1">
         <mat-form-field appearance="outline">
             <mat-label>Enter New Password</mat-label>
-            <input [type]="show ? 'password' : 'text'" matInput (keyup)="applyFilter1($event.target.value)"
+            <input type = 'password' matInput (keyup)="applyFilter1($event.target.value)"
              placeholder="Enter your New Password" formControlName="newpassword">
-            <mat-icon matSuffix (click)="password()">{{show ? 'visibility_off' : 'visibility'}}</mat-icon>
+            <mat-icon matSuffix >lock</mat-icon>
             </mat-form-field> 
            
          <mat-form-field appearance="outline">
               <mat-label>Confirm New Password</mat-label>
-              <input type = password matInput (keyup)="applyFilter($event.target.value)" placeholder="Confirm your New Password" 
+              <input [type]="show ? 'password' : 'text'" matInput (keyup)="applyFilter($event.target.value)" placeholder="Confirm your New Password" 
               formControlName="confirmPassword" autocomplete="off">
-              <mat-icon matSuffix >visibility_off</mat-icon>
+              <mat-icon matSuffix (click)="password()">{{show ? 'visibility_off' : 'visibility'}}</mat-icon>
           </mat-form-field>
-          <h6 class="display">{{display}}</h6>
+          <h6 class="displays" [ngStyle]="display=='Password Matches'?{'color':'green'} : {'color': 'red'}">{{display}}</h6>
     </form>
     <mat-card-actions class="btn">
         <button class="btn1" [disabled]="!setPasswordForm.valid" mat-raised-button color="primary" type="submit" (click)="onSubmit()" >Submit</button>
@@ -43,4 +43,4 @@
       </mat-card-actions>
     </mat-card-content>
 </ng-template>
-  </mat-card>
+</body>
