--- a/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/Layout/header/header.component.css
@@ -35,5 +35,12 @@
 {
     text-decoration: none;
     color: black;
+    
+}
+.avatar
+{
+    right: 1em;
+    position: relative;
+    top:0.3em;
 }
 
