--- a/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.css
@@ -3,6 +3,8 @@
     position: relative;
     overflow: hidden;
     text-align: center;
+    background-color: var(--primary-color);
+    color: var(--text-color);
     
 }
 .cardcontent
@@ -10,6 +12,15 @@
     top:2em;
     height: 200px;
     position: relative;
+    
+}
+.label
+{
+    color: var(--text-color);
+}
+.mat-dialog-container
+{
+    background-color: var(--primary-color);
 }
 .title
 {
