--- a/ProjectAllotmentPortal/AngularHUB/src/app/chart/chart.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/chart/chart.component.html
@@ -1,4 +1,4 @@
-
+<html class="content">
 <i class="material-icons" id="goback" (click)="back()">
     arrow_back
     </i>
@@ -7,4 +7,4 @@
     <h4 class="title" >{{title}}</h4> 
     <canvas id="canvas"></canvas>    
   </div>
-
+</html>
