--- a/ProjectAllotmentPortal/AngularHUB/src/app/displayproject/displayproject.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/displayproject/displayproject.component.css
@@ -6,11 +6,14 @@
   left: 5%;
   top:1em;
   height: 425px;
-  
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 table{
   position: relative;
   width: 100%;
+  background-color: var(--primary-color);
+  
 }
 .scroll
 {
@@ -25,6 +28,7 @@ table{
   font-size: 15px;
   width: 20%;
   font-weight: bold;
+  color: var(--text-color);
  
 }
 .make-red{
@@ -56,6 +60,7 @@ table{
   font-size: 15px;
   color: black;
   text-align: center;
+  color: var(--text-color);
 }
 .tablehead{
   font-size: 17px;
@@ -65,8 +70,13 @@ table{
   color: black;
   background-color: #bdbdbd;
   text-align: center;
+  color: var(--text-color);
 }
 .edit
 {
   cursor: pointer;
+}
+.label
+{
+  color: var(--text-color);
 }
