--- a/ProjectAllotmentPortal/AngularHUB/src/app/displayproject/displayproject.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/displayproject/displayproject.component.html
@@ -4,7 +4,7 @@
 
 <mat-form-field class="filters" appearance="outline">
   <mat-icon matSuffix>search</mat-icon>
-  <mat-label >Search</mat-label>
+  <mat-label class="label" >Search</mat-label>
     <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Search by Employee" autocomplete="off">
   </mat-form-field>
 
