--- a/ProjectAllotmentPortal/AngularHUB/src/app/project/project.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/project/project.component.css
@@ -6,6 +6,8 @@
   top: 1em;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 12), 0 5px 5px 0 rgba(50, 51, 74, 5);  
   height: 420px;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 
 .tablehead{
@@ -24,7 +26,8 @@
   font-size: 15px;
   color: black;
   text-align: center;
-  
+  background-color: var(--primary-color);
+  color: var(--text-color);
 }
 .content
 {
