--- a/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.html
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/resetpassword/resetpassword.component.html
@@ -8,7 +8,7 @@
       <form [formGroup]="changePasswordForm" autocomplete="off">
   
         <mat-form-field appearance="outline" class="oldpass">
-         <mat-label>Enter Current Password</mat-label>
+         <mat-label class="label">Enter Current Password</mat-label>
          <input [type]="show ? 'password' : 'text'" matInput placeholder="Enter your Password" formControlName="oldpassword">
          <mat-icon matSuffix (click)="password()">{{show ? 'visibility_off' : 'visibility'}}</mat-icon>
          </mat-form-field> 
@@ -23,14 +23,14 @@
     <mat-card-content class="cardcontent1">
     <form  [formGroup]="setPasswordForm" autocomplete="off" class="form1">
         <mat-form-field appearance="outline">
-            <mat-label>Enter New Password</mat-label>
+            <mat-label class="label">Enter New Password</mat-label>
             <input type = 'password' matInput (keyup)="applyFilter1($event.target.value)"
              placeholder="Enter your New Password" formControlName="newpassword">
             <mat-icon matSuffix >lock</mat-icon>
             </mat-form-field> 
            
          <mat-form-field appearance="outline">
-              <mat-label>Confirm New Password</mat-label>
+              <mat-label class="label">Confirm New Password</mat-label>
               <input [type]="show ? 'password' : 'text'" matInput (keyup)="applyFilter($event.target.value)" placeholder="Confirm your New Password" 
               formControlName="confirmPassword" autocomplete="off">
               <mat-icon matSuffix (click)="password()">{{show ? 'visibility_off' : 'visibility'}}</mat-icon>
