--- a/ProjectAllotmentPortal/AngularHUB/src/app/welcomepage/welcomepage.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/welcomepage/welcomepage.component.css
@@ -13,6 +13,9 @@
     text-align: center;
     position: relative;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 12), 0 5px 5px 0 rgba(50, 51, 74, 5);
+    background-color: var(--background-color);
+    color: var(--text-color);
+
 }
 .personimage
 {
@@ -40,6 +43,8 @@ h6{
     position: relative;
     text-align: center;
     height: 400px;
+    background-color: var(--background-color);
+    color: var(--text-color);
 }
 .greeting-msg
 {
