--- a/ProjectAllotmentPortal/AngularHUB/src/app/hrdashboard/hrdashboard.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/hrdashboard/hrdashboard.component.css
@@ -2,7 +2,7 @@
   .content
   {
     position: relative;
-    max-height: 400px;
+    max-height: 440px;
     overflow-y: auto;
     
   }
@@ -16,7 +16,9 @@
     left: 4em;
     width: 90%;
     top: 1em;
-    height: 425px;
+    height: 460px;
+    background-color: var(--background-color);
+    color: var(--text-color);
   }
   .tablehead{
     
@@ -35,6 +37,8 @@
     font-size: 15px;
     color: black;
     text-align: center;
+    background-color: var(--primary-color);
+    color: var(--text-color);
   }
   .mat-row:hover {
     background-color:#eeeeee;
