--- a/ProjectAllotmentPortal/AngularHUB/src/app/stream/stream.component.css
+++ b/ProjectAllotmentPortal/AngularHUB/src/app/stream/stream.component.css
@@ -5,12 +5,15 @@
   width: 90%;
   left: 5%;
   top:1em;
-  height: 420px;
+  height: 460px;
+  background-color: var(--background-color);
+  color: var(--text-color);
 }
 table
 {
   position: relative;
   width: 100%; 
+  background-color: var(--primary-color);
 }
 .filters
 {
@@ -18,6 +21,7 @@ table
   font-size: 15px;
   width: 20%;
   font-weight: bold;
+  color: var(--text-color);
 }
 .btn1
 {
@@ -44,15 +48,20 @@ table
     font: bold;
     font-size: 15px;
     color: black;
-    text-align: center;   
+    text-align: center; 
+    color: var(--text-color);  
   }
   .scroll
   {
     overflow-y: auto;
-    max-height: 310px;
+    max-height: 340px;
   }
  .make-red
  {
-   background-color: #ce93d8;
+   background-color:#7e57c2;
  }
+.labels
+{
+  color: var(--text-color);
+}
 
